--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,14 @@
 {
-  "extends": [
-    "react-app",
-    "airbnb",
-    "plugin:jsx-a11y/recommended",
-    "prettier",
-    "prettier/react",
-    "eslint-config-prettier"
-  ],
-  "plugins": ["jsx-a11y", "prettier"],
+  "extends": ["prettier"],
+  "plugins": ["react", "@typescript-eslint", "testing-library"],
   "rules": {
     "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}]
+  },
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   }
 }
