--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "msw": "^0.47.4",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
